2010-09-06  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/configure.in, generic/tclIOUtil.c (Tcl_Stat): Updated so that
	we do not assume that all unix systems have the POSIX blkcnt_t type,
	since OpenBSD apparently does not. Backported from HEAD (2010-02-16).
	* unix/configure:	autoconf-2.59

2010-09-02  Andreas Kupries  <andreask@activestate.com>

	*** 8.5.9 TAGGED FOR RELEASE ***

	* doc/glob.n: Fixed documentation ambiguity regarding the handling
	of -join.

	* library/safe.tcl (::safe::AliasGlob): Fixed another problem, the
	option -join does not stop option processing in the core builtin,
	so the emulation must not do that either.

2010-09-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* library/safe.tcl (::safe::AliasGlob): Moved the command
	extending the actual glob command with a -directory flag to when
	we actually have a proper untranslated path,

2010-09-01  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.9 release.

2010-09-01  Andreas Kupries  <andreask@activestate.com>

	* generic/tclExecute.c: [Bug 3057639]. Applied patch by Jeff to
	* generic/tclVar.c: make the behaviour of lappend in bytecompiled
	* tests/append.test: mode consistent with direct-eval and 'append'
	* tests/appendComp.test: generally. Added tests (append*-9.*)
	showing the difference.
	***POTENTIAL INCOMPATIBILITY***

2010-09-01  Donal K. Fellows  <dkf@users.sf.net>

	* tools/tcltk-man2html.tcl: Improve handling of cross-links for
	options between Ttk manual pages.

	* doc/Tcl.n: Avoid nroff hazards when generating documentation.

2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the
	manifest handling on Win64.
	* win/configure: Regenerated.

2010-08-29  Donal K. Fellows  <dkf@users.sf.net>

	* doc/dict.n: [Bug 3046999]: Corrected cross reference to array
	manpage to refer to (correct) existing subcommand.

2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
